<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">数字标牌</string>
    <string name="netWork_is_not_connected_for_update">网络未连接，检查版本失败</string>
    <string name="netWork_is_not_connected">网络异常，请检查网络</string>
    <string name="login">登录</string>
    <string name="binding">正在绑定中…</string>
    <string name="sync_fail">同步失败</string>
    <string name="update_monitor">正在更新摄像头数据</string>
    <string name="ad_delete">广告已删除</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="deviceName">设备名称</string>
    <string name="languageCode">CN</string>
    <string name="device">设备</string>
    <string name="version">版本</string>
</resources>