<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewTitle"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/deviceName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/app_name" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/deviceName"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/account"
        android:layout_centerHorizontal="true"
        android:hint="@string/deviceName"
        android:inputType="text"
        android:lines="1"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="14dp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/account"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/username"
        android:inputType="text"
        android:lines="1"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="14dp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/account"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="14dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bind_button"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/login" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewVersionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewDeviceId"
        android:layout_alignParentEnd="true" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewDeviceId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
